# Hylozoa-Engine

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  compile.sh  compile_flags.txt  conanfile.txt  docusaurus.config.ts  fastcompile.sh  index.html  justfile  lint.sh  shell.nix  sitemap.xml
.github/ISSUE_TEMPLATE/: new_feature.yml
.github/workflow/: run-unit-tests.yml
.github/workflows/: create-engine-release.yml  create-release.yml  create_release.yml  epitech-mirroring.yml
assets/js/: 01a85c17.29e53299.js  07270c5c.4d37da40.js  14eb3368.a5e55650.js  169fab3e.220df01f.js  169fab3e.8b8071b9.js  17896441.f7faa6c7.js  1df93b7f.59e4d9a8.js  1df93b7f.afea2055.js  1e161ff7.79a9f0f2.js  1e161ff7.b9215b01.js  1f391b9e.f7fe8142.js  29050dda.878dd7f4.js  29050dda.f10d3c81.js  2ff80a6f.b86df3d6.js  32e828db.d66efcc4.js  33fc5bb8.301ecb7d.js  3693.b5024165.js  36994c47.aeb6337b.js  444f6152.b7d4e206.js  4a93dd18.ec816aa4.js  4c678320.15cc6e2e.js  4ee3a3fe.60933549.js  5050b038.a99e8aa3.js  5062.f433cbb3.js  524855ce.5addcf50.js  5d1f4f46.6064d197.js  5e95c892.aca2dde6.js  621db11d.b7a75d11.js  64b95b3c.25aec27c.js  6726.2412389f.js  6875c492.f13faa65.js  6beb0aec.ca00f71d.js  70b2e69c.6cc4fadb.js  78004efd.fcc4e3c1.js  78ec4e48.27966311.js  7ad8336c.34a2bf23.js  814f3328.a4b2eca0.js  814f3328.c3e01a56.js  81d6e374.6c6192a1.js  81d6e374.78da0654.js  (+37 more)
blog/: atom.xml  index.html  rss.xml  tags.yml
blog/2021-08-26-template/: index.mdx
blog/2025-03-01-Performance&Optimization/: index.mdx
entities/: world.json
markdown-page/: index.html
pages/: README.md  docusaurus.config.ts  justfile  package-lock.json  package.json  sidebars.ts
pages/blog/: tags.yml  (+1 more)
scripts/: compile-default.sh
src/: main.cpp
tests/: Makefile
(+63 files in other folders)
